learn more align issue

--- a/core/src/components/Homecom/ProductSuite.css
+++ b/core/src/components/Homecom/ProductSuite.css
@@ -12,16 +12,17 @@
 
 .product-cards {
   position: relative;
-  border-radius: 16px;
-  border: 1px solid #e2e8f0;
+  border-radius: 16px !important;
+  border: 1px solid #e2e8f0 !important;
   max-width: 350px;
   display: flex;
   flex-direction: column;
   justify-content: space-between;
-  height: 100%;
+  height: 100% !important;
   overflow: hidden;
   background: #fff;
   transition: transform 0.4s ease, box-shadow 0.4s ease;
+
 }
 
 .product-cards:hover {
@@ -50,43 +51,58 @@
 }
 
 .card-subtitle-p {
-  font-size: 16px;
-  font-weight: 600;
+  font-size: 16px !important;
+  font-weight: 600 !important;
 }
 
 .card-description-p {
-  color: #444;
-  font-size: 0.875rem;
-  margin-bottom: 16px;
-  min-height: 60px;
+  color: #45556c;
+  font-size: 14px;
+  margin-top: 12px !important;
+  margin-bottom: 10px !important;
+  line-height: 20px !important;
+  /* min-height: 60px; */
 }
 
 .card-tags-p {
   display: flex;
   justify-content: space-between;
   margin-bottom: 16px;
+  
 }
 
 .tag-boxs {
-  background: #f4f4f4;
-  padding: 8px;
-  border-radius: 8px;
+  background: hsl(210, 40%, 96%);
+  padding: 8px 12px !important;
+  border-radius: 4px !important;
   flex: 1;
   margin: 0 4px;
-  font-size: 0.75rem;
+  text-align: center;
   transition: background 0.3s ease;
 }
-
+.product-card-tags-small {
+  color: #45556c !important;
+  font-size: 14px !important;
+  font-weight: 500 !important;
+}
+.product-card-tags {
+  color: #1d293d !important;
+  font-size: 15px !important;
+  font-weight: 700 !important;
+}
 .product-cards:hover .tag-boxs {
   background: #e2e8f0;
 }
 
 .learn-more {
-  color: #000;
   font-weight: 600;
-  text-transform: capitalize;
-  font-size: 0.875rem;
+  text-transform: capitalize !important;
+  font-size: 16px !important;
   transition: color 0.3s ease, transform 0.3s ease;
+  text-align: center !important;
+  
+  margin-top: auto !important;          
+  align-self: center !important; 
 }
 
 .product-cards:hover .learn-more {
