--- a/core/src/pages/Home.css
+++ b/core/src/pages/Home.css
@@ -389,6 +389,8 @@ height: 15px;
 .info-description {
   margin-bottom: 24px;
   color: #555;
+  width: 100%;
+  max-width: 600px !important;
 }
 
 .info-point {
